crates/orator-axum/tests/snapshots/codegen_axum__module_types.snap
---
source: crates/orator-axum/tests/codegen_axum.rs
expression: module.types
---
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
pub struct Court {
    pub id: i64,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub indoor: Option<bool>,
    pub name: String,
    pub surface: Surface,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
pub struct Error {
    pub code: i32,
    pub message: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
pub struct Member {
    pub first_name: String,
    pub id: i64,
    pub last_name: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
pub struct NewMember {
    pub first_name: String,
    pub last_name: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
pub enum Surface {
    #[serde(rename = "clay")]
    Clay,
    #[serde(rename = "grass")]
    Grass,
    #[serde(rename = "hard")]
    Hard,
    #[serde(rename = "carpet")]
    Carpet,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
pub struct UpdateMember {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub first_name: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub last_name: Option<String>,
}
