crates/orator-axum/tests/snapshots/codegen_axum__tennis_club_axum_handlers.snap
---
source: crates/orator-axum/tests/codegen_axum.rs
expression: code
---
impl axum::response::IntoResponse for ListBookingsResponse {
    fn into_response(self) -> axum::response::Response {
        match self {
            Self::Ok(body) => (http::StatusCode::OK, axum::Json(body)).into_response(),
            Self::Unauthorized(body) => {
                (http::StatusCode::UNAUTHORIZED, axum::Json(body)).into_response()
            }
        }
    }
}
async fn handle_list_bookings<T, Ctx>(
    axum::extract::State(api): axum::extract::State<std::sync::Arc<T>>,
    ctx: Ctx,
) -> Result<ListBookingsResponse, T::Error>
where
    T: BookingsApi<Ctx>,
{
    api.list_bookings(ctx).await
}
pub fn bookings_router<T, Ctx>(api: std::sync::Arc<T>) -> axum::Router
where
    T: BookingsApi<Ctx>,
    T::Error: axum::response::IntoResponse,
    Ctx: axum::extract::FromRequestParts<std::sync::Arc<T>> + Send + 'static,
{
    axum::Router::new()
        .route("/bookings", axum::routing::get(handle_list_bookings::<T, Ctx>))
        .with_state(api)
}
impl axum::response::IntoResponse for ListCourtsResponse {
    fn into_response(self) -> axum::response::Response {
        match self {
            Self::Ok(body) => (http::StatusCode::OK, axum::Json(body)).into_response(),
            Self::Unauthorized(body) => {
                (http::StatusCode::UNAUTHORIZED, axum::Json(body)).into_response()
            }
        }
    }
}
async fn handle_list_courts<T, Ctx>(
    axum::extract::State(api): axum::extract::State<std::sync::Arc<T>>,
    ctx: Ctx,
) -> Result<ListCourtsResponse, T::Error>
where
    T: CourtsApi<Ctx>,
{
    api.list_courts(ctx).await
}
pub fn courts_router<T, Ctx>(api: std::sync::Arc<T>) -> axum::Router
where
    T: CourtsApi<Ctx>,
    T::Error: axum::response::IntoResponse,
    Ctx: axum::extract::FromRequestParts<std::sync::Arc<T>> + Send + 'static,
{
    axum::Router::new()
        .route("/courts", axum::routing::get(handle_list_courts::<T, Ctx>))
        .with_state(api)
}
impl axum::response::IntoResponse for ListMembersResponse {
    fn into_response(self) -> axum::response::Response {
        match self {
            Self::Ok(body) => (http::StatusCode::OK, axum::Json(body)).into_response(),
            Self::Unauthorized(body) => {
                (http::StatusCode::UNAUTHORIZED, axum::Json(body)).into_response()
            }
        }
    }
}
async fn handle_list_members<T, Ctx>(
    axum::extract::State(api): axum::extract::State<std::sync::Arc<T>>,
    ctx: Ctx,
) -> Result<ListMembersResponse, T::Error>
where
    T: MembersApi<Ctx>,
{
    api.list_members(ctx).await
}
impl axum::response::IntoResponse for CreateMemberResponse {
    fn into_response(self) -> axum::response::Response {
        match self {
            Self::Created(body) => {
                (http::StatusCode::CREATED, axum::Json(body)).into_response()
            }
            Self::UnprocessableEntity(body) => {
                (http::StatusCode::UNPROCESSABLE_ENTITY, axum::Json(body))
                    .into_response()
            }
        }
    }
}
async fn handle_create_member<T, Ctx>(
    axum::extract::State(api): axum::extract::State<std::sync::Arc<T>>,
    ctx: Ctx,
    axum::Json(body): axum::Json<NewMember>,
) -> Result<CreateMemberResponse, T::Error>
where
    T: MembersApi<Ctx>,
{
    api.create_member(ctx, body).await
}
impl axum::response::IntoResponse for GetMemberResponse {
    fn into_response(self) -> axum::response::Response {
        match self {
            Self::Ok(body) => (http::StatusCode::OK, axum::Json(body)).into_response(),
            Self::NotFound(body) => {
                (http::StatusCode::NOT_FOUND, axum::Json(body)).into_response()
            }
        }
    }
}
async fn handle_get_member<T, Ctx>(
    axum::extract::State(api): axum::extract::State<std::sync::Arc<T>>,
    ctx: Ctx,
    axum::extract::Path(member_id): axum::extract::Path<i64>,
) -> Result<GetMemberResponse, T::Error>
where
    T: MembersApi<Ctx>,
{
    api.get_member(ctx, GetMemberPathParams { member_id }).await
}
impl axum::response::IntoResponse for UpdateMemberResponse {
    fn into_response(self) -> axum::response::Response {
        match self {
            Self::Ok(body) => (http::StatusCode::OK, axum::Json(body)).into_response(),
            Self::NotFound(body) => {
                (http::StatusCode::NOT_FOUND, axum::Json(body)).into_response()
            }
        }
    }
}
async fn handle_update_member<T, Ctx>(
    axum::extract::State(api): axum::extract::State<std::sync::Arc<T>>,
    ctx: Ctx,
    axum::extract::Path(member_id): axum::extract::Path<i64>,
    axum::Json(body): axum::Json<UpdateMember>,
) -> Result<UpdateMemberResponse, T::Error>
where
    T: MembersApi<Ctx>,
{
    api.update_member(
            ctx,
            UpdateMemberPathParams {
                member_id,
            },
            body,
        )
        .await
}
impl axum::response::IntoResponse for DeleteMemberResponse {
    fn into_response(self) -> axum::response::Response {
        match self {
            Self::NoContent => http::StatusCode::NO_CONTENT.into_response(),
            Self::NotFound(body) => {
                (http::StatusCode::NOT_FOUND, axum::Json(body)).into_response()
            }
        }
    }
}
async fn handle_delete_member<T, Ctx>(
    axum::extract::State(api): axum::extract::State<std::sync::Arc<T>>,
    ctx: Ctx,
    axum::extract::Path(member_id): axum::extract::Path<i64>,
) -> Result<DeleteMemberResponse, T::Error>
where
    T: MembersApi<Ctx>,
{
    api.delete_member(
            ctx,
            DeleteMemberPathParams {
                member_id,
            },
        )
        .await
}
pub fn members_router<T, Ctx>(api: std::sync::Arc<T>) -> axum::Router
where
    T: MembersApi<Ctx>,
    T::Error: axum::response::IntoResponse,
    Ctx: axum::extract::FromRequestParts<std::sync::Arc<T>> + Send + 'static,
{
    axum::Router::new()
        .route(
            "/members",
            axum::routing::get(handle_list_members::<T, Ctx>)
                .post(handle_create_member::<T, Ctx>),
        )
        .route(
            "/members/{member_id}",
            axum::routing::get(handle_get_member::<T, Ctx>)
                .patch(handle_update_member::<T, Ctx>)
                .delete(handle_delete_member::<T, Ctx>),
        )
        .with_state(api)
}
